// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageBreadcrumb /> with url: undefined should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <span
      class="page-breadcrumb-empty"
    >
      The Void
    </span>
  </li>
</DocumentFragment>
`;

exports[`<PageBreadcrumb /> with url: value and active: false when the current location does not match the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <span
      class="page-breadcrumb-empty"
    >
      The Void
    </span>
  </li>
</DocumentFragment>
`;

exports[`<PageBreadcrumb /> with url: value and active: false when the current location matches the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <span
      class="page-breadcrumb-empty"
    >
      The Void
    </span>
  </li>
</DocumentFragment>
`;

exports[`<PageBreadcrumb /> with url: value and active: true when the current location does not match the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <a
      class="page-breadcrumb-link"
      href="/the-void"
    >
      The Void
    </a>
  </li>
</DocumentFragment>
`;

exports[`<PageBreadcrumb /> with url: value and active: true when the current location matches the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <a
      class="page-breadcrumb-link"
      href="/the-void"
    >
      The Void
    </a>
  </li>
</DocumentFragment>
`;

exports[`<PageBreadcrumb /> with url: value when the current location does not match the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <a
      class="page-breadcrumb-link"
      href="/the-void"
    >
      The Void
    </a>
  </li>
</DocumentFragment>
`;

exports[`<PageBreadcrumb /> with url: value when the current location matches the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="page-breadcrumb"
  >
    <span
      class="page-breadcrumb-empty"
    >
      The Void
    </span>
  </li>
</DocumentFragment>
`;
